--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -103,10 +103,10 @@ font:
     # Font family
     #
     # Default:
-    #   - (macOS) Menlo
+    #   - (macOS) Meslo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FiraCode Nerd Font
+    family: Meslo Nerd Font
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -117,7 +117,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: Meslo Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -128,7 +128,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: Meslo Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -139,7 +139,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: Meslo Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
