--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -106,7 +106,7 @@ font:
     #   - (macOS) Meslo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Monoid
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -117,7 +117,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Monoid
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -128,7 +128,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Monoid
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -139,7 +139,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Monoid
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
@@ -573,8 +573,8 @@ key_bindings:
 
   # (macOS only)
   - { key: Key0, mods: Command, action: ResetFontSize }
+  - { key: Plus, mods: Command, action: IncreaseFontSize }
   - { key: Equals, mods: Command, action: IncreaseFontSize }
-  - { key: Add, mods: Command, action: IncreaseFontSize }
   - { key: Minus, mods: Command, action: DecreaseFontSize }
   - { key: K, mods: Command, action: ClearHistory }
   - { key: K, mods: Command, chars: "\x0c" }
