Adds git template
inspired by https://gist.github.com/lisawolderiksen/a7b99d94c92c6671181611be1641c733

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,3 +9,5 @@
 	path = ~/.config/git/gitconfig-secrets
 [git]
 	excludesfile = /Users/vitor/.gitignore
+[commit]
+	template = /Users/vitor/.gitmessage
