--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -10,8 +10,8 @@ env:
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
- TERM: xterm-256color
- # TERM: alacritty
+# TERM: xterm-256color
+ TERM: alacritty
 
 window:
   # Window dimensions (changes require restart)
@@ -61,7 +61,7 @@ window:
   #
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
-  startup_mode: SimpleFullscreen
+  startup_mode: Windowed
 
   # Window title
   title: Alacritty
@@ -584,8 +584,8 @@ key_bindings:
   - { key: M, mods: Command, action: Minimize }
   - { key: Q, mods: Command, action: Quit }
   - { key: W, mods: Command, action: Quit }
-  - { key: F, mods: Command|Control, action: ToggleFullscreen }
-
+  #- { key: Return, mods: Command|Control, action: ToggleFullscreen }
+  - { key: Return, mods: Command, action: ToggleFullscreen }
   - { key: Paste, action: Paste }
   - { key: Copy, action: Copy }
   - { key: L, mods: Control, action: ClearLogNotice }
