--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ setw -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
-set -s default-terminal 'tmux-256color'
+set -s default-terminal 'screen-256color'
 
 # dracula customizations
 set -g @dracula-plugins "battery weather time"
