--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".tmux"]
 	path = .tmux
 	url = git@github.com:gpakosz/.tmux.git
+[submodule ".asdf"]
+	path = .asdf
+	url = git@github.com:asdf-vm/asdf.git
